<resources>
    <string name="app_name">Vivo Mobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_login">Đăng Nhập</string>
    <string name="menu_tv">Truyền Hình</string>
    <string name="menu_film">Điện Ảnh</string>
    <string name="menu_tv_show">TV Show</string>
    <string name="menu_music">Âm Nhạc</string>
    <string name="menu_child">Thiếu Nhi</string>
    <string name="menu_news">Tin Tức</string>

    <string-array name="string_menu">
        <item>@string/menu_login</item>
        <item>@string/menu_tv</item>
        <item>@string/menu_film</item>
        <item>@string/menu_tv_show</item>
        <item>@string/menu_music</item>
        <item>@string/menu_child</item>
        <item>@string/menu_news</item>
    </string-array>

    <integer-array name="ic_menu">
        <item>@drawable/ic_menu_camera</item>
        <item>@drawable/ic_menu_camera</item>
        <item>@drawable/ic_menu_camera</item>
        <item>@drawable/ic_menu_camera</item>
        <item>@drawable/ic_menu_camera</item>
        <item>@drawable/ic_menu_camera</item>
        <item>@drawable/ic_menu_camera</item>
    </integer-array>


    <string name="video">Video</string>
    <string name="live">Live</string>
    <string name="news">Tin tức</string>
    <string name="search">Tìm kiếm</string>
    <string name="account">Tài khoản</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="kind">Thể loại</string>
    <string name="country">Quốc gia</string>
    <string name="sort">Sắp xếp</string>
    <string name="all">Tất cả</string>
    <string name="facebook_account">Tài khoản Facebook</string>
    <string name="google_account">Tài khoản Google</string>
    <string name="or">Hoặc</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="register_user">Đăng ký tài khoản</string>

    <string name="latest_news">MỚI NHẤT</string>
    <string name="wait_news">HÓNG</string>
    <string name="videos_news">VIDEOS</string>
    <string name="trend">Xu hướng</string>
    <string name="do_not_miss">Đừng bỏ lỡ</string>

    <string name="video_new">MỚI</string>
    <string name="video_hot">HOT</string>
    <string name="video_all">TẤT CẢ</string>

    <string name="search_title">Có thể bạn sẽ thích</string>
    <string name="world_intertainment">Thế giới giải trí hoàn toàn mới</string>
    <string name="free_experience">Miễn phí trải nghiệm 1 tháng</string>

    <string name="information">Thông tin</string>
    <string name="history">Lịch sử</string>
    <string name="favorite">Yêu thích</string>
    <string name="download">Tải về</string>
    <string name="hobby">Sở thích</string>
    <string name="help">Help</string>

    <string name="change">Thay đổi</string>
    <string name="exchange_history">Lịch sử giao dịch</string>
    <string name="renewal">Gia hạn thêm</string>
    <string name="payment">Thanh toán</string>

    <string name="date">Ngày</string>
    <string name="money">Số tiền (VNĐ)</string>
    <string name="port_payment">Cổng thanh toán</string>
    <string name="load_more">Xem Thêm</string>
    <string name="schedule">Lịch phát sóng</string>
    <string name="next_enter">N\nE\nX\nT</string>
    <string name="write_comment">Viết bình luận</string>
    <string name="like">Like</string>
    <string name="reply">Reply</string>
    <string name="remove_cmt">Bỏ bình luận</string>
    <string name="continue_cmt">Tiếp tục</string>
    <string name="remove">Bỏ</string>
    <string name="expiry_date">Hạn dùng:</string>
    <string name="upgrade">Nâng cấp</string>
    <string name="infor_package">Gói:</string>
</resources>
