<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/profile_exchange_history_height"
    android:id="@+id/root"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvDate"
        style="@style/profile_exchange_history"
        android:layout_width="100dp"
        android:layout_centerVertical="true"
        android:text="@string/date" />

    <TextView
        android:id="@+id/tvMoney"
        style="@style/profile_exchange_history"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/tvBank"
        android:layout_toRightOf="@+id/tvDate"
        android:text="@string/money" />

    <TextView
        android:id="@+id/tvBank"
        style="@style/profile_exchange_history"
        android:layout_width="120dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/port_payment" />
</RelativeLayout>
