<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/login_margin_two_view"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_cover_height"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Chào"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="John"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/ivAvatar"
            style="@style/profile_avatar" />
    </FrameLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/login_margin_two_view"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/common_margin_left"
        android:layout_marginRight="@dimen/common_margin_left"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/infor_package" />

        <TextView
            android:id="@+id/tvNamePackage"
            style="@style/text_package"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvPackage"
            android:text="PRO" />

        <TextView
            android:id="@+id/tvUpgrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toLeftOf="@+id/tvExpiryDate"
            android:layout_toRightOf="@+id/tvNamePackage"
            android:text="@string/upgrade"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tvExpiryDate"
            android:text="@string/expiry_date" />

        <TextView
            android:id="@+id/tvExpiryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="1/1/2018"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>
